Asp change log
==============

The following is a history of changes to the Asp software, in reverse
chronological order.

Changes
-------

Version 0.7.3.1 (compiler 0.7.1.5, engine 0.7.5.0):
- Build:
  - Added INSTALL_DEV build option to separately control installation of
    development files (e.g., headers).
  - Fixed custom build commands to use the DESTDIR environment variable as
    appropriate.

Version 0.7.3.0 (compiler 0.7.1.5, engine 0.7.5.0):
- Compiler:
  - Fixed an issue with misindented comments. Comments should be allowed
    anywhere, regardless of indent level, but they were being flagged as
    syntax errors.
- Engine:
  - Added support for application object types.
  - Fixed a number of issues discovered during fuzz testing.
  - Fixed bugs in some AspIs* functions.
- Standalone application:
  - Replaced use of malloc/free with new/delete.
- Build:
  - Relaxed the version of CMake required to 3.5 in order to support older
    systems.

Version 0.7.2.2 (compiler 0.7.1.4, engine 0.7.4.2):
- Special thanks to Lassi Hamalainen for suggesting all of these changes.
- Compiler:
  - Added -o option to specify the names of the output files.
- Engine:
  - Fixed a bug in AspNewBoolean which would crash if the singleton allocation
    failed.
  - Added AspSealCode to allow use of script executable code residing outside
    the engine's normal code area.
- Standalone application:
  - Updated to use new AspSealCode except when the code size is specified via
    the appropriate command line option.
- General:
  - Added support for file name arguments that start with an option prefix.
    This affects aspc, aspinfo, and asps.
  - Clarified licensing.
- Build:
  - Standardized path name separator, file name separators, and command line
    option prefixes for each supported platform. These are no longer build
    options.
  - Decoupled debug output generation from the Debug build configuration.

Version 0.7.2.1 (compiler 0.7.1.3, engine 0.7.4.1):
- Engine: